Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6857948/T6857948.out
T6857948.java:16:32: compiler.err.cant.resolve.location.args: kindname.method, nosuchfunction, , , (compiler.misc.location: kindname.class, Test, null)
1 error
